fix: mixin wrong colour

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -47,7 +47,7 @@
 
 	&:hover {
 		background-color: var( --wp--preset--color--base-2 );
-		background-color: color-mix(in srgb, var( --wp--preset--color--base-2 ) 50%, transparent);
+		background-color: color-mix(in srgb, var( --wp--preset--color--contrast ) 3.5%, transparent);
 	}
 
 	&:focus {
